syntax = "proto3";
option go_package = "github.com/celer-network/sgn-v2/proto/eth";

import "google/protobuf/descriptor.proto";

package bridge;

extend google.protobuf.FieldOptions {
  string soltype = 1004;
}

message Relay {
  bytes sender = 1 [(soltype) = "address"];
  bytes receiver = 2 [(soltype) = "address"];
  bytes token = 3 [(soltype) = "address"];  // asset address on dest chain
  bytes amount = 4 [(soltype) = "uint256"];
  uint64 src_chain_id = 5;
  uint64 dst_chain_id = 6;
  bytes src_transfer_id = 7 [(soltype) = "bytes32"];
}
