syntax = "proto3";
option go_package = "github.com/celer-network/sgn-v2/proto/eth";

import "google/protobuf/descriptor.proto";

package farming;

extend google.protobuf.FieldOptions {
  string soltype = 1004;
}

message FarmingRewards {
  // domain is keccak256(abi.encodePacked(chainid, verifyingContractAddress, "FarmingRewards"));
  bytes domain = 1 [(soltype) = "bytes32"];

  // recipient defines the reward recipient
  bytes recipient = 2 [(soltype) = "address"];

  // token_addresses defines the list of reward token addresses
  repeated bytes token_addresses = 3 [(soltype) = "address"];

  // cumulative_reward_amounts defines the cumulative amount of rewards
  repeated bytes cumulative_reward_amounts = 4 [(soltype) = "uint256"];
}
