syntax = "proto3";
option go_package = "github.com/celer-network/sgn-v2/proto/pool";

import "google/protobuf/descriptor.proto";

package pool;

extend google.protobuf.FieldOptions { string soltype = 1004; }

message WithdrawMsg {
    uint64 chainid = 1;
    uint64 seqnum = 2; // global unique across chains
    uint64 deadline = 3; // valid before this block number
    bytes receiver = 4 [ (soltype) = "address" ];
    bytes token = 5 [ (soltype) = "address" ];
    bytes amount = 6 [ (soltype) = "uint256" ];
}