syntax = "proto3";
option go_package = "github.com/celer-network/sgn-v2/proto/eth";

import "google/protobuf/descriptor.proto";

package staking;

extend google.protobuf.FieldOptions {
  string soltype = 1004;
}

message StakingReward {
  bytes domain = 1 [(soltype) = "bytes32"];
  bytes recipient = 2 [(soltype) = "address"];
  bytes cumulative_reward_amount = 3 [(soltype) = "uint256"];
}

message Slash {
  bytes domain = 1 [(soltype) = "bytes32"];
  bytes validator = 2 [(soltype) = "address"];
  uint64 nonce = 3;
  uint64 slash_factor = 4;
  uint64 expire_time = 5;  // block timestamp
  uint64 jail_period = 6;  // block number
  repeated AcctAmtPair collectors = 7;
}

message AcctAmtPair {
  bytes account = 1 [(soltype) = "address"];
  bytes amount = 2 [(soltype) = "uint256"];
}
